deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-microservice
  template:
    metadata:
      labels:
        app: flask-microservice
    spec:
      containers:
      - name: flask-microservice
        image: flask-microservice
        ports:
        - containerPort: 5000
